--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,23 @@
-<p *ngIf="isTrue">True</p>
-<p *ngIf="!isTrue">False</p>
+<!-- <ng-container [ngSwitch]="status.Free">
+  <div *ngFor="let item of items">
+    <div *ngSwitchCase="status.Free">
+        <p>Free</p>
+      <app-product [item]="item.title"></app-product>
+    </div>
 
-<div *ngFor="let item of items">
-    {{ item }}
-</div>
+    <div *ngSwitchCase="status.Offer">
+        <p>Offer</p>
+      <app-product [item]="item.title"></app-product>
+    </div>
+  </div>
+</ng-container>
+ -->
+
+ <div *ngFor="let item of items">
+    <app-product [item]="item.title" 
+      (onAddToCart)="receivedProductValue($event)">
+    </app-product>
+ </div>
+ 
+ <h3>Show Details</h3>
+ {{ productValue | json }}
