Angular Directive and Route

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,6 @@
 <div class="app-product">
   <h1>{{ item }}</h1>
-
   <button (click)="addToCart()">Add to Cart</button>
+  <button (click)="gotoDetails()">Show Details</button>
 </div>
+
