Update Product page link

--- a/src/app/product/pages/create-page/create-page.component.html
+++ b/src/app/product/pages/create-page/create-page.component.html
@@ -21,6 +21,8 @@
 
             <button type="submit" class="btn btn-primary mt-3">Create</button>
         </form>
+
+        {{ productFormGroup.value | json }}
        </div>
    </div>
 </div>
