--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<nav class="navbar navbar-light bg-white shadow-sm">
+    <div class="container col-8 offser-2">
+      <a class="navbar-brand" routerLink="/">BookStore</a>
+    </div>
+  </nav>
+
 <router-outlet></router-outlet>
