--- a/src/app/blog/pages/post/post.component.html
+++ b/src/app/blog/pages/post/post.component.html
@@ -1,13 +1,17 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-6 mt-3" *ngFor="let post of posts">
-            <div class="card">
-                <div class="card-body">
-                    <h2>{{ post.title }} </h2>
-                    <p>{{ post.body }}</p>
+        <ng-container *ngIf="!loading">
+            <div class="col-6 mt-3" *ngFor="let post of posts">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>{{ post.title }} </h2>
+                        <p>{{ post.body }}</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </ng-container>
+        
+        <p *ngIf="loading">Loading...</p>
     </div>
 </div>
