--- a/src/app/blog/pages/post/post.component.html
+++ b/src/app/blog/pages/post/post.component.html
@@ -1,17 +1,56 @@
-
 <div class="container">
-    <div class="row">
-        <ng-container *ngIf="!loading">
-            <div class="col-6 mt-3" *ngFor="let post of posts">
-                <div class="card">
-                    <div class="card-body">
-                        <h2>{{ post.title }} </h2>
-                        <p>{{ post.body }}</p>
-                    </div>
-                </div>
-            </div>
-        </ng-container>
-        
-        <p *ngIf="loading">Loading...</p>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <form [formGroup]="postForm" (ngSubmit)="createPost()">
+        <div class="mt-3">
+          <label for="userId" class="form-label">User Id:</label>
+          <input
+            formControlName="userId"
+            type="text"
+            class="form-control"
+            placeholder="User id"
+          />
+        </div>
+
+        <div class="mt-3">
+          <label for="userId" class="form-label">Title</label>
+          <input
+            formControlName="title"
+            type="text"
+            class="form-control"
+            placeholder="Post title"
+          />
+        </div>
+
+        <div class="mt-3">
+          <label for="userId" class="form-label">Body</label>
+          <input
+            formControlName="body"
+            type="text"
+            class="form-control"
+            placeholder="Post body"
+          />
+        </div>
+
+        <div class="mt-3">
+          <button type="submit" class="btn btn-primary">Create new post.</button>
+        </div>
+      </form>
     </div>
+  </div>
+
+  <div class="row">
+    <ng-container *ngIf="!loading">
+      <div class="col-6 mt-3" *ngFor="let post of posts">
+        <div class="card">
+          <div class="card-body">
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.body }}</p>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
+    <p *ngIf="loading">Loading...</p>
+  </div>
 </div>
