--- a/src/app/blog/pages/post/post.component.html
+++ b/src/app/blog/pages/post/post.component.html
@@ -1,5 +1,10 @@
 <div class="container">
   <div class="row">
+    <div *ngIf="showAlert">
+      <div class="alert alert-primary" role="alert">
+        Post is updated!
+      </div>
+    </div>
     <div class="col-8 offset-2">
       <form [formGroup]="postForm" (ngSubmit)="createPost()">
         <div class="mt-3">
@@ -42,7 +47,9 @@
   <div class="row">
     <ng-container *ngIf="!loading">
       <div class="col-6 mt-3" *ngFor="let post of posts">
-        <div class="card">
+
+        <div class="card" (click)="selectPost(post)">
+
           <div class="card-body">
             <h2>{{ post.title }}</h2>
             <p>{{ post.body }}</p>
