--- a/src/app/blog/pages/post/post.component.html
+++ b/src/app/blog/pages/post/post.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div class="col-8 offset-2">
-      <form [formGroup]="postForm" (ngSubmit)="createPost()">
+      <!-- <form [formGroup]="postForm" (ngSubmit)="createPost()">
         <div class="mt-3">
           <label for="userId" class="form-label">User Id:</label>
           <input
@@ -40,7 +40,8 @@
         <div class="mt-3">
           <button type="submit" class="btn btn-primary">Create new post.</button>
         </div>
-      </form>
+      </form> -->
+      <app-post-form [editMode]="false" (onSubmit)="createPost($event)"></app-post-form>
     </div>
   </div>
 
@@ -48,8 +49,8 @@
     <ng-container *ngIf="!loading">
       <div class="col-6 mt-3" *ngFor="let post of posts">
 
-        <div class="card">
-          <div class="card-body" (click)="selectPost(post)">
+        <div class="card" (click)="selectPost(post)">
+          <div class="card-body" >
             <h2>{{ post.title }}</h2>
             <p>{{ post.body }}</p>
           </div>
